--- a/css/index.css
+++ b/css/index.css
@@ -36,6 +36,7 @@ header p{
     padding-top: 1%;
     padding-bottom: 1%;
     background-color: black;
+    transition: 400ms;
 }
 
 img{
@@ -96,6 +97,10 @@ body{
     width: 7%;
     padding-left: 4%;
     padding-right: 4%;
+}
+
+.SousCategorie:hover{
+    background-color: rgb(148, 28, 28);
 }
 
 
