--- a/css/guessLegend.css
+++ b/css/guessLegend.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Apex';
-    src: url("police/Apex-Bold.ttf");
+    src: url("police/Apex-Black.ttf");
 }
 
 @font-face {
@@ -12,12 +12,15 @@
     font-family: 'Apex';
 }
 
+header > a > h1{
+    font-size: 5em;
+}
+
 header h1{
     display: flex;
     justify-content: center;
-    font-size: 5em;
+    font-size: 3em;
     text-shadow: 5px 5px 5px black;
-    letter-spacing: 10px;
 }
 
 body p {
@@ -29,17 +32,6 @@ header p{
     justify-content: center;
     font-family: 'Apex_thin';
     text-shadow: 3px 3px 3px black;
-}
-
-#theme {
-    margin-left: 35%;
-    margin-right: 35%;
-    margin-bottom: 2%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.616);
-    border-radius: 10px;
 }
 
 #theme p {
@@ -55,10 +47,12 @@ header p{
 }
 
 body{
-    color : white;
-    background-image: url('../image/apexfond3.jpg');
+    background-image: url('../image/apexfond3.jpg') ;
+    background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover ;
+    background-attachment: fixed;
+    color : white;
 }
 
 body h1{
@@ -108,13 +102,20 @@ button:hover {
     display: flex;
     justify-content: center;
     
+    
 }
 
 .caracteristique p{
-    margin : 50px;
+    text-align: center;
+    width : 15%;
+    margin : 1%;
     padding: 10px;
     padding-left: 20px;
     padding-right: 20px;
     border-radius: 10px ;
     background-color: red;
+}
+
+#Apexdle{
+    letter-spacing: 10px;
 }
