GuessLegend.js presque fini plus que la transition petit a petit pour la legend proposer en cours

--- a/css/guessLegend.css
+++ b/css/guessLegend.css
@@ -119,3 +119,9 @@ button:hover {
 #Apexdle{
     letter-spacing: 10px;
 }
+
+#bordure{
+    margin-top: 5%;
+    display: flex;
+    justify-content: center;
+}
