--- a/css/guessLegend.css
+++ b/css/guessLegend.css
@@ -125,3 +125,11 @@ button:hover {
     display: flex;
     justify-content: center;
 }
+
+
+@keyframes pop {
+    from {transform: rotateY(0deg);}
+    to {transform: rotateY(180deg);}
+  }
+  
+  
